src/objects/loan__Month_End_Loan_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>loan__Charged_Off_Fees__c</fullName>
        <label>Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Interest__c</fullName>
        <label>Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Charged_Off_Principal__c</fullName>
        <label>Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Current_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Current_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Delinquent_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
        <label>Frequency of Loan Payment</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Highest_Credit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Highest Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Last payment amount received.</description>
        <label>Last_Payment_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_Id__c</fullName>
        <label>Loan Account Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Account_Pmt_History_Date__c</fullName>
        <label>Metro2 Account Pmt History Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Account_Status_Code__c</fullName>
        <label>Metro2 Account Status Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_First_Delinquency_Date__c</fullName>
        <label>Metro2 First Delinquency Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Payment_History__c</fullName>
        <label>Metro2 Payment History</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Payment_Rating__c</fullName>
        <label>Metro2 Payment Rating</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payoff_Amount_As_Of_Today__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payoff Amount As Of Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Previous_Installment_Date__c</fullName>
        <label>Previous Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <label>Month End Loan Snapshot</label>
    <nameField>
        <displayFormat>SS-{0}</displayFormat>
        <label>Month End Loan Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month End Loan Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>